# frogress

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  GUIDE.md  LICENSE.md  README.md  aristophanes.py  caddy.env  cat_jam.py  cli.ini  cli.py  docker-compose.yaml  docker_entrypoint.sh  manage.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
consumer_scripts/: cat_jam.py
deployment/caddy/: Caddyfile  Dockerfile  entrypoint.sh
deployment/frogress/: Dockerfile  entrypoint.sh
frog_api/: admin.py  apps.py  cache.py  exceptions.py  models.py  serializers.py  tests.py  urls.py  views.py
frog_api/migrations/: 0001_initial.py  0001_squashed_0009_alter_project_discord_alter_project_repository_and_more.py  0002_remove_entry_version_category_entry_category.py  0003_rename_decompiled_functions_entry_decompiled_chunks_and_more.py  0004_alter_category_options_alter_entry_options_and_more.py  0005_remove_entry_decompiled_bytes_and_more.py  0006_alter_project_auth_key.py  0007_alter_entry_timestamp.py  0008_project_discord_project_repository_project_website.py  0009_alter_project_discord_alter_project_repository_and_more.py  0010_alter_entry_category_alter_project_discord_and_more.py  0011_entry_description.py
frog_api/serializers/: model_serializers.py  request_serializers.py
frog_api/views/: common.py  data.py  structure.py
frogress/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
