[tool.poetry]
name = "frogress"
version = "0.1.0"
description = "Progress API for decompilation projects"
authors = ["Ethan Roseman <ethteck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
djangorestframework = "^3.13.1"
# psycopg2-binary = "^2.9.3"
django-nested-admin = "^3.4.0"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
django-stubs = "^1.12.0"
djangorestframework-stubs = "^1.7.0"
django-stubs-ext = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
