[tool.poetry]
name = "frogress"
version = "0.4.0"
description = "Progress API for decompilation projects"
authors = ["Ethan Roseman <ethteck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
djangorestframework = "^3.14.0"
django-nested-admin = "^4.0.2"
django-environ = "^0.9.0"
setuptools = "^69.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
django-stubs = "^4.2.7"
djangorestframework-stubs = "^3.14.5"
django-stubs-ext = "^4.2.7"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
